none fixed image on small screens

--- a/assets/stylesheets/_layout.scss
+++ b/assets/stylesheets/_layout.scss
@@ -32,7 +32,8 @@
 	background-color: white;
 	background-position: center center;
 	background-size: cover;
-	background-attachment: fixed;
+	background-attachment: scroll;
+	@include breakpoint(baby-bear) { background-attachment: fixed; }
 	background-repeat: no-repeat;
 }
 
